--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,9 @@
   --bg-tertiary: var(--color-tertiary);
 
   --background-color: #e9e9e9;
+
+  --main-size: 1200px;
+  --main-padding: 1rem;
 }
 
 body {
