--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,43 +2,112 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --color-error: #f44336;
-  --color-warning: #ff9800;
-  --color-success: #4caf50;
-  --color-info: #2196f3;
-  --color-disabled: #c2c2c2;
+@layer utilities {
+  :root {
+    --grid-layout-size: 1000px;
+    --grid-layout-padding: 1rem;
 
-  --color-primary: #0c8bf3;
-  --color-secondary: #ff6433;
-  --color-tertiary: #4caf50;
+    --nav-height: 75px;
+  }
 
-  --text-primary: #333;
-  --text-color: #fff;
-  --text-disabled: #eeeeee;
+  .grid-layout {
+    display: grid;
+    grid-template-columns:
+      minmax(var(--grid-layout-padding, 0), auto) minmax(
+        0,
+        var(--grid-layout-size, 1000px)
+      )
+      minmax(var(--grid-layout-padding, 0), auto);
+  }
 
-  --bg-primary: var(--color-primary);
-  --bg-secondary: var(--color-secondary);
-  --bg-tertiary: var(--color-tertiary);
+  .grid-layout > *:not(.full-width) {
+    grid-column: 2;
+  }
 
-  --background-color: #e9e9e9;
-
-  --main-size: 1000px;
-  --main-padding: 1rem;
+  .grid-layout > .full-width {
+    grid-column: 1 / -1;
+  }
 }
 
-body {
-  color: var(--text-primary);
-  background-color: var(--background-color);
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 97%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 221 83% 60%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --success: 127 69% 43%; /* green */
+    --success-foreground: 0 0 100%; /* white */
+
+    --warning: 35 84% 62%;
+    --warning-foreground: 222.2 84% 4.9%;
+
+    --danger: 359 70% 43%;
+    --danger-foreground: 222.2 84% 4.9%;
+
+    --info: 194 66% 61%;
+    --info-foreground: 222.2 84% 4.9%;
+
+    --disabled: 0 0% 67%;
+    --disabled-foreground: 222.2 84% 4.9%;
+
+    --cancel: 0 0% 100%;
+    --cancel-foreground: 222.2 84% 4.9%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 221.2 83.2% 53.3%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+    --primary: 217.2 91.2% 59.8%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 224.3 76.3% 48%;
+  }
 }
 
-.grid-layout {
-  display: grid;
-  grid-template-columns:
-    minmax(var(--main-padding, 0), 1fr) minmax(0, var(--main-size, 800px))
-    minmax(var(--main-padding, 0), 1fr);
-}
-
-.grid-layout > * {
-  grid-column: 2;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
