--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,6 @@
   :root {
     --grid-layout-size: 1000px;
     --grid-layout-padding: 1rem;
-
     --nav-height: 75px;
   }
 
@@ -30,61 +29,61 @@
 }
 
 @layer base {
-  :root {
+  :root,
+  .light {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
-    --card: 0 0% 97%;
-    --card-foreground: 222.2 84% 4.9%;
+    --card: 0 0% 93%;
+    --card-foreground: 221 30% 20%;
 
     --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover-foreground: 221 30% 25%;
 
-    --primary: 221 83% 60%;
+    --primary: 221 80% 60%;
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 221 50% 90%;
+    --secondary-foreground: 221 50% 10%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 333 100% 70%;
+    --accent-foreground: 333 100% 99%;
 
-    --success: 127 69% 43%; /* green */
-    --success-foreground: 0 0 100%; /* white */
+    --success: 127 40% 50%;
+    --success-foreground: 127 69% 98%;
 
-    --warning: 35 84% 62%;
-    --warning-foreground: 222.2 84% 4.9%;
+    --warning: 35 84% 65%;
+    --warning-foreground: 35 84% 10%;
 
-    --danger: 359 70% 43%;
-    --danger-foreground: 222.2 84% 4.9%;
+    --destructive: 359 70% 60%;
+    --destructive-foreground: 359 70% 97%;
 
-    --info: 194 66% 61%;
-    --info-foreground: 222.2 84% 4.9%;
+    --info: 194 66% 90%;
+    --info-foreground: 194 66% 30%;
 
-    --disabled: 0 0% 67%;
-    --disabled-foreground: 222.2 84% 4.9%;
+    --disabled: 0 0% 80%;
+    --disabled-foreground: 0 0% 50%;
 
-    --cancel: 0 0% 100%;
-    --cancel-foreground: 222.2 84% 4.9%;
+    --cancel: 0 0% 90%;
+    --cancel-foreground: 0 0% 20%;
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    --muted: 221 20% 92%;
+    --muted-foreground: 221 30% 40%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
 
-    --radius: 0.5rem;
+    --radius: 0.7rem;
   }
 
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
     --primary: 217.2 91.2% 59.8%;
@@ -97,9 +96,48 @@
     --accent-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
+
+    --card: 0 0% 93%;
+    --card-foreground: 221 30% 20%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 221 30% 25%;
+
+    --primary: 221 80% 60%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 221 50% 90%;
+    --secondary-foreground: 221 50% 10%;
+
+    --accent: 333 100% 70%;
+    --accent-foreground: 333 100% 99%;
+
+    --success: 127 40% 50%;
+    --success-foreground: 127 69% 98%;
+
+    --warning: 35 84% 65%;
+    --warning-foreground: 35 84% 10%;
+
+    --destructive: 359 70% 60%;
+    --destructive-foreground: 359 70% 97%;
+
+    --info: 194 66% 90%;
+    --info-foreground: 194 66% 30%;
+
+    --disabled: 0 0% 80%;
+    --disabled-foreground: 0 0% 50%;
+
+    --cancel: 0 0% 90%;
+    --cancel-foreground: 0 0% 20%;
+
+    --muted: 221 20% 92%;
+    --muted-foreground: 221 30% 40%;
+
+    --ring: 221.2 83.2% 53.3%;
   }
 }
 
